[package]
name = "wb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
which = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
zip = "0.5"
thiserror = "1.0"

reqwest = "0.11"
futures = "0.3"

counter = "0.5"
